--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ a{
 section{
     width: 100%;
     height: 95vh;
-    background-image: url("/image/bg.png");
+    background-image: url("../image/bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
