--- a/style.css
+++ b/style.css
@@ -317,18 +317,18 @@ button:active{
 }
 
 .box-1{
-    background-image: url("/image/services-1.png"); 
+    background-image: url("image/services-1.png"); 
     /* background-color: #ABABAB; */
 
 }
 
 .box-2{
-     background-image: url("/image/services-2.png");
+     background-image: url("image/services-2.png");
     /* background-color: #ABABAB; */
 
 }
 .box-3{
-    background-image: url("/image/servies-3.png");
+    background-image: url("image/servies-3.png");
     /* background-color: #ABABAB; */
 
 }
@@ -385,7 +385,7 @@ button:active{
 .contactez-moi{
     width: 100%;
     height: 280px;
-    background-image: url("/image/project\ in\ your\ mind.png");
+    background-image: url("image/project\ in\ your\ mind.png");
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
