--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     height: 60px;
-    background-color: #b8b5b1;
+    background-color: #0a0a3f;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
     padding: 0px 5%;
 }
@@ -36,13 +36,13 @@ nav ul{
 nav ul li a {
     margin: 30px;
     font-family: myriad pro regular;
-    color: #505050;
+    color: #fff;
     font-size: 15px;
     font-weight: 700;
 }
 .logo {
     font-family: RoadTest;
-    color: #000000;
+    color: #fff;
     font-size: 22px;
 }
 .active{
@@ -192,8 +192,6 @@ button:active{
   margin: 20px;
   
 }
-
-
 .about-container{
     width: 80%;
     height: 330px;
@@ -259,8 +257,10 @@ button:active{
     border: none;
     font-family: calibri;
     border-color: #262525;
+    border-radius: 5px;
     background-color: orange;
     font-size: 13px;
+    font-weight: bold;
 }
 .services{
     height: 600px;
@@ -290,7 +290,7 @@ button:active{
     margin: 50px 0px;
 
 }
-.box-1, .box-2, .box-3{
+.box-1, .box-2, .box-3, .box-4{
     width: 250px;
     height: 320px;
     background-repeat: no-repeat;
@@ -304,8 +304,7 @@ button:active{
 .box-container{
     display: flex;
     justify-content: space-between;
-    position: relative;
-    
+    position: relative;  
 }
 .box-container i {
     font-size: 30px;
@@ -315,26 +314,26 @@ button:active{
     top: 30px;
     position: absolute;
 }
-
 .box-1{
-    background-image: url("image/services-1.png"); 
     /* background-color: #ABABAB; */
-
+    background-color: #0a0a3f;
 }
-
 .box-2{
-     background-image: url("image/services-2.png");
     /* background-color: #ABABAB; */
-
+    background-color: #0a0a3f;
 }
 .box-3{
-    background-image: url("image/servies-3.png");
     /* background-color: #ABABAB; */
+    background-color: #0a0a3f;
+}
+.box-4{
+    background-color: #0a0a3f;
 
 }
 .box-1 span,
 .box-2 span,
-.box-3 span{
+.box-3 span,
+.box-4 span{
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -346,7 +345,8 @@ button:active{
 }
 .box-1 p:nth-child(1),
 .box-2 p:nth-child(1),
-.box-3 p:nth-child(1){
+.box-3 p:nth-child(1),
+.box-4 p:nth-child(1){
     color: #fff;
     font-family: calibri;
     font-size: 23px;
@@ -354,7 +354,8 @@ button:active{
 }
 .box-1 p:nth-child(2),
 .box-2 p:nth-child(2),
-.box-3 p:nth-child(2){
+.box-3 p:nth-child(2),
+.box-4 p:nth-child(2){
     font-family: calibri;
     text-align: center;
     width: 230px;
@@ -363,7 +364,8 @@ button:active{
 }
 .box-1 p:nth-child(3),
 .box-2 p:nth-child(3),
-.box-3 p:nth-child(3){
+.box-3 p:nth-child(3),
+.box-4 p:nth-child(3){
     font-family: calibri;
     text-align: center;
     width: 230px;
@@ -372,7 +374,8 @@ button:active{
 }
 .box-1 button,
 .box-2 button,
-.box-3 button{
+.box-3 button,
+.box-4 button{
     width: 100px;
     height: 30px;
     background-color: orange;
@@ -381,11 +384,13 @@ button:active{
     border-radius: 5px;
     position: absolute;
     bottom: 35px;
+    font-weight: bold;
 }
 .contactez-moi{
     width: 100%;
     height: 280px;
-    background-image: url("image/project\ in\ your\ mind.png");
+    background-color: #0a0a3f;
+
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -398,7 +403,8 @@ button:active{
     font-size: 30px;
     font-family: calibri;
     font-weight: bold;
-    border-bottom: 2px solid #FFFFFF;
+    
+    
 }
 .contactez-moi button{
     width: 200px;
@@ -408,6 +414,7 @@ button:active{
     border: none;
     font-size: 14px;
     font-weight: bold;
+    border-radius: 5px;
 }
 footer {
     height: 300px;
