--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import "bourbon";
+
 body{
     background-color: #f6f5f5;
     margin:0px;
@@ -41,7 +42,7 @@ nav ul li a {
     font-weight: 700;
 }
 .logo {
-    font-family: RoadTest;
+    font-family: 'Monoton', cursive;
     color: #fff;
     font-size: 22px;
 }
@@ -532,5 +533,9 @@ footer p:nth-child(2){
 .a-social-b i {
     color: #2b2b2b;
     font-size: 20px;
+}
+
+@media screen and (max-width:500px){
+    .header{height:auto};
 }
 
