correction bug, balise commentaire

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
 <%- include('header'); -%>
+
 	<body>
 		<section class="en-tete">
-			<!-- navigation -->
+			<%# navigation %> 
 			<nav>
-				<!-- logo -->
+				<%# logo %> 
 				<a href="#" class="logo">MCD</a>
-				<!-- menu -->
+				<%# menu %> 
 				<ul>
 					<li><a href="/views/contact.ejs">Accueil</a></li>
 					<li><a href="#">A propos</a></li>
@@ -13,7 +14,7 @@
 					<li><a href="#">équipe</a></li>
 				</ul>
 			</nav>
-			<!-- text -->
+			<%# text %> 
 			<div class="text-container">
 				<p>Developpeur Mobile</p>
 				<p>Developpeur Web</p>
@@ -22,7 +23,7 @@
                 <p>(Proverbe Chinois)</p>
                 
             </div>
-            <!-- Nuage de mots -->
+			<%# nuage de mots %> 
             <div class="nuage-de-mots">
                 <p>JavaScript</p>
                 <p>Symfony</p>
@@ -34,17 +35,17 @@
                 <p>Bootstrap</p>
                 <p>HTML</p>
             </div>
-			<!--  mot -->
+			<%# mot %> 
 				<span class="glow">Matt Cornic Dev</span>
 
 		</section>
-		<!-- about-section -->
+		<%# about-section %> 
 		<div
 			class="about-container">
-			<!-- image -->
+			<%# image %> 
 			<img
 			src="image/LAAMIMAT-Rarib.png" alt="portrait">
-			<!-- about-text -->
+			<%# about-text %> 
 			<div class="about-text">
 				<p>Rarib LAAMIMAT</p>
 				<p>Developer web & web mobile</p>
@@ -55,47 +56,47 @@
 				</p>
 				<p>Framework</p>
 				<p>Node.js, Symfony, Bootstrap, jquery...</p>
-				<!-- button -->
+				<%# button %> 
 
 				<button>En savoir plus</button>
 				<button>Télécharger CV</button>
 			</div>
 
 		</div>
-		<!-- services -->
+		<%# services %> 
 		<div
 			class="services">
-			<!-- text -->
+			<%# text %> 
 			<div class="services-text">
 				<p>Services</p>
 				<p>Nos Services</p>
 				<p>Nous réalisons vos sites entièrement ou partiellement. Notre équipe est à votre disposition pour tous renseignements et précisions.</p>
 			</div>
-			<!-- box -->
+			<%# box %> 
 			<div
 				class="box-container">
-				<!-- 1 -->
+				<%# 1 %> 
 				<div class="box-1">
 					<i class="fas fa-window-restore"></i>
 					<p class="heading">Intégration</p>
 					<p class="details">Si vous ne savez pas quoi choisir nous vous accompagnons pour réaliser le design qui vous satisfera et qui correspondra à l'image de votre société, de vos produits ou de votre personne</p>
 					<button>En savoir plus</button>
 				</div>
-				<!-- 2 -->
+				<%# 2 %> 
 				<div class="box-2">
                     <i class="fas fa-code"></i>
 					<p class="heading">Développement</p>
 					<p class="details">Le site peut-être intégré et développé par notre équipe, nous réalisons nos projets aussi bien avec PHP ou le framework Symfony ou l'environnement JavaScript nodeJS, versionning de projet avec GIT</p>
 					<button>En savoir plus</button>
 				</div>
-				<!-- 3 -->
+				<%# 3 %> 
 				<div class="box-3">
 					<i class="fas fa-database"></i>
 					<p class="heading">Sécurité/SEO</p>
 					<p class="details">La sécurité est primordiale et nos sites sont entièrement sécurisés de sorte à ne pas subir d'intrusions néfastes. Le référencement google est optimisé au maximum</p>
 					<button>En savoir plus</button>
                 </div>
-                <!-- 4 -->
+				<%# 4 %> 
 				<div class="box-4">
 					<i class="fas fa-server"></i>
 					<p class="heading">Hébergement</p>
@@ -106,7 +107,7 @@
 
         </div>
         
-		<!-- contactez moi -->
+		<%# contactez-moi %> 
 		<div class="contactez-moi">
 			<p>"Vous avez un projet ?"</p>
 			<button>Contactez-nous</button>
