--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,9 @@
-	<!-- footer -->
+    <%# footer %> 
     <footer>
         <p>Let's go</p>
         <p>
             Satisfait ou retravaillé, si le résultat ne vous plait pas nous le retravaillons de sorte à obtenir votre entière satisfaction</p>
-        <!-- social -->
+        <%# social %> 
         <div class="social-icons">
             <ul>
             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -15,7 +15,7 @@
         </div>
 
     </footer>
-    <!-- attached social bar -->
+    <%# bar social attaché %> 
     <div class="a-social-b">
         <ul>
         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -25,7 +25,7 @@
         <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
         </ul>
     </div>
-    <!-- copyright -->
+    <%# copyright %> 
     <p class="copyright">Copyright © 2020 Matt Cornic Dev - All rights reseved</p>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
